commited by Benglore person

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
      <h2>Hi this line is created by hyd person</h2>
+     <h2>hi this line is created by bnglr person</h2>
 </body>
 </html>
